--- a/googlecolab_Spark_notebook.ipynb
+++ b/googlecolab_Spark_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMj3SZOZp4TMBot96W48Kni",
+      "authorship_tag": "ABX9TyMm1VbSyFetqWHPxSf8zy2J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YIPgTKx_Mh8O",
-        "outputId": "f325456c-1821-48cb-dac2-b1c95e0af5a5"
+        "outputId": "70e26249-a95d-4ac6-dd87-81b206162fae"
       },
-      "execution_count": 61,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,6 +357,39 @@
             "|       2| 7700953.170000889|\n",
             "|       1|2188647.1400000826|\n",
             "+--------+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1.show(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kRJmJ4ldvO9g",
+        "outputId": "5e3e3193-77ac-4de8-ee3e-05c0a0c4ee8d"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+-----------+\n",
+            "|VendorID|tpep_pickup_datetime|tpep_dropoff_datetime|passenger_count|trip_distance|RatecodeID|store_and_fwd_flag|PULocationID|DOLocationID|payment_type|fare_amount|extra|mta_tax|tip_amount|tolls_amount|improvement_surcharge|total_amount|congestion_surcharge|Airport_fee|\n",
+            "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+-----------+\n",
+            "|       2| 2024-01-01 00:57:55|  2024-01-01 01:17:43|              1|         1.72|         1|                 N|         186|          79|           2|       17.7|  1.0|    0.5|       0.0|         0.0|                  1.0|        22.7|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:03:00|  2024-01-01 00:09:36|              1|          1.8|         1|                 N|         140|         236|           1|       10.0|  3.5|    0.5|      3.75|         0.0|                  1.0|       18.75|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:17:06|  2024-01-01 00:35:01|              1|          4.7|         1|                 N|         236|          79|           1|       23.3|  3.5|    0.5|       3.0|         0.0|                  1.0|        31.3|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:36:38|  2024-01-01 00:44:56|              1|          1.4|         1|                 N|          79|         211|           1|       10.0|  3.5|    0.5|       2.0|         0.0|                  1.0|        17.0|                 2.5|        0.0|\n",
+            "|       1| 2024-01-01 00:46:51|  2024-01-01 00:52:57|              1|          0.8|         1|                 N|         211|         148|           1|        7.9|  3.5|    0.5|       3.2|         0.0|                  1.0|        16.1|                 2.5|        0.0|\n",
+            "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+-----------+\n",
+            "only showing top 5 rows\n",
             "\n"
           ]
         }
@@ -554,6 +587,134 @@
       "metadata": {
         "id": "Wzuzm9egd9Y9"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "team_df = [[\"A\",2,3,4]\n",
+        "           ,[\"B\",1,2,3]\n",
+        "           ,[\"C\",8,9,10]]\n",
+        "col = [\"Name\",\"forward\",\"center\",\"back\"]\n",
+        "df2 = spark.createDataFrame(team_df,col)"
+      ],
+      "metadata": {
+        "id": "KJcEUgIMxAab"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df2.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EZ_RFblCyDOl",
+        "outputId": "c596ed23-2420-4664-ea05-cfbb17efa3a3"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+------+----+\n",
+            "|Name|forward|center|back|\n",
+            "+----+-------+------+----+\n",
+            "|   A|      2|     3|   4|\n",
+            "|   B|      1|     2|   3|\n",
+            "|   C|      8|     9|  10|\n",
+            "+----+-------+------+----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df3 = df2.unpivot(ids=[\"Name\"]\\\n",
+        "         ,values = [\"forward\",\"center\",\"back\"]\\\n",
+        "         ,variableColumnName=\"position\"\\\n",
+        "         ,valueColumnName=\"Count\")"
+      ],
+      "metadata": {
+        "id": "G7OGCBvAyJ9S"
+      },
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df3.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nOzpXFYxzlxr",
+        "outputId": "d53db01b-daee-4fe2-a470-bb72115cba31"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+--------+-----+\n",
+            "|Name|position|Count|\n",
+            "+----+--------+-----+\n",
+            "|   A| forward|    2|\n",
+            "|   A|  center|    3|\n",
+            "|   A|    back|    4|\n",
+            "|   B| forward|    1|\n",
+            "|   B|  center|    2|\n",
+            "|   B|    back|    3|\n",
+            "|   C| forward|    8|\n",
+            "|   C|  center|    9|\n",
+            "|   C|    back|   10|\n",
+            "+----+--------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df3.offset(3).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xj-2gVP70Ucb",
+        "outputId": "ff735105-bb8f-4559-d0a8-e0d1221f6f11"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+--------+-----+\n",
+            "|Name|position|Count|\n",
+            "+----+--------+-----+\n",
+            "|   B| forward|    1|\n",
+            "|   B|  center|    2|\n",
+            "|   B|    back|    3|\n",
+            "|   C| forward|    8|\n",
+            "|   C|  center|    9|\n",
+            "|   C|    back|   10|\n",
+            "+----+--------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
