Python adjacent elements string

--- a/googlecolab_Spark_notebook.ipynb
+++ b/googlecolab_Spark_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMm1VbSyFetqWHPxSf8zy2J",
+      "authorship_tag": "ABX9TyNXCRabNozuYckAHPDmVvb6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "lMvGbz9EBIDL"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "6Z1TtxTTDo0A"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "jHwURiHEBVXk"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "v6IKO-ltDlAS"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "DwZw8URCIgn2"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
         },
         "outputId": "062ed16b-25e0-44f3-8451-e5db3870648b"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "id": "BVFARHHiH5tN",
         "outputId": "abb3a830-a065-4b9f-ef7e-43b434e15dea"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
         "id": "ZU2fuz2vIGHM",
         "outputId": "65446cc0-ee0e-44e2-feb1-6a14f4b1adfb"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +253,7 @@
         "id": "iRM_5VugIXS0",
         "outputId": "dd0e0e65-1b29-4e1b-d4cf-ec2524c57b35"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +279,7 @@
         "id": "Heg3jIeqIRB9",
         "outputId": "50b4ceeb-d1ef-443b-8fc7-a35ef251d124"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,7 +305,7 @@
         "id": "jAbUwgznLnCp",
         "outputId": "109e6ea1-2e3f-4ec6-83c4-feb26583c171"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +344,7 @@
         "id": "YIPgTKx_Mh8O",
         "outputId": "70e26249-a95d-4ac6-dd87-81b206162fae"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +374,7 @@
         "id": "kRJmJ4ldvO9g",
         "outputId": "5e3e3193-77ac-4de8-ee3e-05c0a0c4ee8d"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "wCAxN1jTSn8f"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
         "id": "4wICLu5yS0TH",
         "outputId": "dd324ed3-395e-4504-f35f-d491cec1934a"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +444,7 @@
         "id": "4-5l6PW9TqHu",
         "outputId": "91a31245-39b9-4f61-f765-553468293996"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +471,7 @@
       "metadata": {
         "id": "ndQB8mvp4Eb-"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -486,7 +486,7 @@
         "id": "ZGeihJ_z8_Aw",
         "outputId": "badae6cc-ed22-4510-af17-0201f46e471e"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +516,7 @@
         "id": "pw4rTeBO9HIW",
         "outputId": "faedf490-fd90-4818-85e3-836462c14167"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +561,7 @@
         "id": "ctpy1yy_NH_2",
         "outputId": "01bb4e10-2fd6-45cf-8b19-8547f4b06439"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
       "metadata": {
         "id": "KJcEUgIMxAab"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +615,7 @@
         "id": "EZ_RFblCyDOl",
         "outputId": "c596ed23-2420-4664-ea05-cfbb17efa3a3"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "G7OGCBvAyJ9S"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -659,7 +659,7 @@
         "id": "nOzpXFYxzlxr",
         "outputId": "d53db01b-daee-4fe2-a470-bb72115cba31"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -695,7 +695,7 @@
         "id": "xj-2gVP70Ucb",
         "outputId": "ff735105-bb8f-4559-d0a8-e0d1221f6f11"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,6 +713,73 @@
             "+----+--------+-----+\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def getmysubstring(str_length,str_lit):\n",
+        "  adj_dict={}\n",
+        "  for chr_index in range(len(str_lit)-1):\n",
+        "\n",
+        "    if str_lit[chr_index] not in adj_dict.keys():\n",
+        "      adj_dict[str_lit[chr_index]]=[]\n",
+        "\n",
+        "    if str_lit[chr_index] != str_lit[chr_index+1] and \\\n",
+        "       str_lit[chr_index+1] not in adj_dict[str_lit[chr_index]]:\n",
+        "\n",
+        "      adj_dict[str_lit[chr_index]]= adj_dict[str_lit[chr_index]] + [str_lit[chr_index+1]]\n",
+        "\n",
+        "    if chr_index > 0 and \\\n",
+        "       str_lit[chr_index] != str_lit[chr_index-1] and \\\n",
+        "       str_lit[chr_index-1] not in adj_dict[str_lit[chr_index]]:\n",
+        "      adj_dict[str_lit[chr_index]]= adj_dict[str_lit[chr_index]] + [str_lit[chr_index-1]]\n",
+        "  key='b'\n",
+        "  vstr=''\n",
+        "  print(adj_dict)\n",
+        "  for i in range(str_length):\n",
+        "    if len(adj_dict[key]) >= 2 and\\\n",
+        "        key not in vstr:\n",
+        "      vstr = vstr + key\n",
+        "      key = adj_dict[key][0]\n",
+        "\n",
+        "  if len(vstr) < str_length:\n",
+        "    return 'not possible'\n",
+        "  else:\n",
+        "    return vstr\n",
+        "\n",
+        "getmysubstring(4,\"abaddfg\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "wiiz4qFrQKrX",
+        "outputId": "7f4a2d06-8805-441b-ff0f-af02064d3342"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': ['b', 'd'], 'b': ['a'], 'd': ['a', 'f'], 'f': ['g', 'd']}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'not possible'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 41
         }
       ]
     }
