--- a/googlecolab_Spark_notebook.ipynb
+++ b/googlecolab_Spark_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXCRabNozuYckAHPDmVvb6",
+      "authorship_tag": "ABX9TyNIWMjZNnrHPYCD4VuDJKFN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -735,17 +735,34 @@
         "       str_lit[chr_index] != str_lit[chr_index-1] and \\\n",
         "       str_lit[chr_index-1] not in adj_dict[str_lit[chr_index]]:\n",
         "      adj_dict[str_lit[chr_index]]= adj_dict[str_lit[chr_index]] + [str_lit[chr_index-1]]\n",
-        "  key='b'\n",
+        "  key=str_lit[0]\n",
         "  vstr=''\n",
         "  print(adj_dict)\n",
+        "\n",
+        "\n",
         "  for i in range(str_length):\n",
-        "    if len(adj_dict[key]) >= 2 and\\\n",
-        "        key not in vstr:\n",
-        "      vstr = vstr + key\n",
-        "      key = adj_dict[key][0]\n",
+        "    for key in adj_dict.keys():\n",
+        "      if len(adj_dict[key]) >= 2 and\\\n",
+        "         key not in vstr:\n",
+        "         if len(vstr) == 0:\n",
+        "          vstr = vstr + key\n",
+        "         else:\n",
+        "          index_eligible_adjacent_positions = [vstr.index(item) for item in adj_dict[key] if item in vstr]\n",
+        "          if index_eligible_adjacent_positions[0] +1 in index_eligible_adjacent_positions:\n",
+        "            vstr = vstr[:index_eligible_adjacent_positions[0]+1] + key + vstr[index_eligible_adjacent_positions[0]+1:]\n",
+        "          else:\n",
+        "            if index_eligible_adjacent_positions[0]-1 in index_eligible_adjacent_positions:\n",
+        "              vstr = vstr[:index_eligible_adjacent_positions[0]-1] + key + vstr[index_eligible_adjacent_positions[0]-1:]\n",
+        "            else:\n",
+        "              #both position as empty so any place is good place\n",
+        "              vstr = vstr + key\n",
+        "      #break\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "  if len(vstr) < str_length:\n",
-        "    return 'not possible'\n",
+        "    return 'not possible :' + vstr\n",
         "  else:\n",
         "    return vstr\n",
         "\n",
@@ -757,9 +774,9 @@
           "height": 53
         },
         "id": "wiiz4qFrQKrX",
-        "outputId": "7f4a2d06-8805-441b-ff0f-af02064d3342"
+        "outputId": "8a1cc9a2-be1a-4897-ce65-56088c40c8dd"
       },
-      "execution_count": 41,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,14 +789,46 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'not possible'"
+              "'not possible :adf'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"pankaj\"\n",
+        "name[:3]+\"r\"+name[2:]\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "H6-tS_O2CTcn",
+        "outputId": "c1ac7640-9c85-41de-89da-796c74d1d582"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'panrnkaj'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     }
