--- a/Structured_Streaming.ipynb
+++ b/Structured_Streaming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3ssoiq4Y5l5zMPuLRhAcP",
+      "authorship_tag": "ABX9TyOXlGXpfjcrSyFIDRF7wCcn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dh-8bNSmftZt",
-        "outputId": "f7eb3b64-060d-4768-ed5f-9fd3f88a5e93"
+        "outputId": "63571300-24c9-4a76-fb8d-30fc1bc42e9a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.5.2)\n",
-            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n"
+            "Collecting pyspark\n",
+            "  Downloading pyspark-3.5.2.tar.gz (317.3 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m317.3/317.3 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
+            "Building wheels for collected packages: pyspark\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyspark: filename=pyspark-3.5.2-py2.py3-none-any.whl size=317812365 sha256=143d725f1ac0a3245103b8fe82634bcbdf6669df3220833f2a1324195850bb40\n",
+            "  Stored in directory: /root/.cache/pip/wheels/34/34/bd/03944534c44b677cd5859f248090daa9fb27b3c8f8e5f49574\n",
+            "Successfully built pyspark\n",
+            "Installing collected packages: pyspark\n",
+            "Successfully installed pyspark-3.5.2\n"
           ]
         }
       ],
@@ -67,7 +77,7 @@
       "metadata": {
         "id": "iytu5ZCLjr1p"
       },
-      "execution_count": 200,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,7 +88,7 @@
       "metadata": {
         "id": "F0tM6c5lka9g"
       },
-      "execution_count": 189,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -99,7 +109,7 @@
       "metadata": {
         "id": "A0goOaF2Cj73"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +126,7 @@
       "metadata": {
         "id": "KZWBwUmFzf6k"
       },
-      "execution_count": 190,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -137,7 +147,7 @@
       "metadata": {
         "id": "WT9q5udv4D0g"
       },
-      "execution_count": 185,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -151,59 +161,81 @@
           "height": 36
         },
         "id": "GNiuj0S8Bn6C",
-        "outputId": "e579f9c1-b117-4dee-97df-a2eab3081ca8"
+        "outputId": "b2026a3c-081a-4848-8f1a-dc1a4e2cfe2c"
       },
-      "execution_count": 208,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2024-09-09 09:12:10'"
+              "'2024-09-11 10:47:15'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 208
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "s = requests.Session()\n",
-        "\n",
         "i = 0\n",
+        "s = requests.Session()\n",
         "url = \"https://stream.wikimedia.org/v2/stream/recentchange\"\n",
+        "file_number = str(random.randint(1,10000))\n",
         "with s.get(url, stream=True) as resp:\n",
-        "  for line in resp.iter_lines(1024,decode_unicode=True):\n",
-        "    # Check if line has some bytes in it\n",
-        "    if line:\n",
-        "      # convert line into json\n",
-        "      # get data lines only\n",
-        "      if line[:4] == \"data\":\n",
-        "          # print(json.loads(line[5:]))\n",
-        "          with open(\"./input/recentChanges\"+str(random.randint(1,10000))+\".json\",\"a\",encoding=\"utf-8\") as f:\n",
-        "              flat_json_pdf = flat_json(line[5:])\n",
-        "              # flat_json_pdf[\"meta_dt\"] = pd.to_datetime(flat_json_pdf[\"meta_dt\"])\n",
-        "              flat_json_pdf.to_json(f,orient=\"records\",lines=True,index=False)\n",
-        "          i = i + 1\n",
-        "    if i>=15 :\n",
-        "      f.close()\n",
-        "      break"
+        "    for line in resp.iter_lines(1024,decode_unicode=True):\n",
+        "        # Check if line has some bytes in it\n",
+        "        if line:\n",
+        "            # convert line into json\n",
+        "            # get data lines only\n",
+        "            if line[:4] == \"data\":\n",
+        "                # print(line[5:])\n",
+        "                json_line = json.loads(line[5:])\n",
+        "                flatlines = pd.json_normalize(json_line,sep=\"_\")\n",
+        "                with open(\"input/rc\"+str(random.randint(1,10000))+\".json\",\"a\",encoding=\"utf-8\") as f:\n",
+        "                    flatlines.to_json(f,orient=\"records\",lines=True,index=False)\n",
+        "                    i = i + 1\n",
+        "                    if i>=4 :\n",
+        "                        break"
       ],
       "metadata": {
-        "id": "9gElddzZgfGw"
+        "id": "Vb3_FJkfrLmt"
       },
-      "execution_count": 237,
+      "execution_count": 65,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "flat_json_pdf[\"meta_dt\"].head()"
+        "%ls -l input | wc -l"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IWESPbFLC_4n",
+        "outputId": "4427008e-61ad-4786-9753-c29f6ddf46ba"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flat_json_pdf[\"meta_dt\"].head(2)"
       ],
       "metadata": {
         "id": "YC4KnaEU1INX",
@@ -211,15 +243,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 115
         },
-        "outputId": "f6da2d1f-835a-49c8-9f91-05a521856c64"
+        "outputId": "c7c027ff-acb3-4ea1-f3ab-23f5c1e4029e"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    2024-09-09T08:31:24Z\n",
+              "0    2024-09-10T06:37:03Z\n",
               "Name: meta_dt, dtype: object"
             ],
             "text/html": [
@@ -247,7 +279,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2024-09-09T08:31:24Z</td>\n",
+              "      <td>2024-09-10T06:37:03Z</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -255,7 +287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 192
+          "execution_count": 8
         }
       ]
     },
@@ -298,7 +330,7 @@
       "metadata": {
         "id": "WmJiMJef56cK"
       },
-      "execution_count": 193,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -313,12 +345,12 @@
     {
       "cell_type": "code",
       "source": [
-        "%rm -f *.json"
+        "%rm -f input/*.json"
       ],
       "metadata": {
         "id": "jTq2_6Ah-DAG"
       },
-      "execution_count": 186,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -329,7 +361,7 @@
       "metadata": {
         "id": "PjIrDPtB-iWf"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -340,18 +372,29 @@
       "metadata": {
         "id": "vyj0qupO58uu"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#static_df= spark.read.load(\"recentChanges3550.json\",format=\"json\",schema=dSchema)"
+        "static_df= spark.read.load(\"input/recentChanges1612.json\",format=\"json\",schema=dSchema)"
       ],
       "metadata": {
         "id": "zwXVjOQUx9GQ"
       },
-      "execution_count": 162,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "static_df.select(\"meta_dt\").show(15)"
+      ],
+      "metadata": {
+        "id": "OKvaFPb3q75_"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -367,7 +410,7 @@
         "outputId": "e809df76-f52d-43c8-cefb-78dd5dbe95c0",
         "collapsed": true
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,7 +470,7 @@
       "metadata": {
         "id": "Dsw8A9vlktFH"
       },
-      "execution_count": 196,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -436,10 +479,25 @@
         "recentChange.isStreaming"
       ],
       "metadata": {
-        "id": "z6ngMdH23l9w"
+        "id": "z6ngMdH23l9w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2a89ae22-558b-447e-e590-2b7b20e31a2f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -452,9 +510,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KST1sBJO82hG",
-        "outputId": "2554fc60-3e74-4a24-810e-24eabedd7111"
+        "outputId": "caf28fc5-997b-4a1a-8d08-5c1bd6fbb855"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +522,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 198
+          "execution_count": 83
         }
       ]
     },
@@ -472,9 +530,10 @@
       "cell_type": "code",
       "source": [
         "# Assuming 'recentChange' is your streaming DataFrame\n",
-        "myquery = rc_df\\\n",
-        "   .withWatermark(\"meta_dt\", \"10 seconds\")\\\n",
-        "   .groupBy(F.window(\"meta_dt\",\"10 seconds\")\\\n",
+        "myquery = recentChange\\\n",
+        "  .withColumn(\"meta_dt\", recentChange.meta_dt.cast(T.TimestampType()))\\\n",
+        "  .withWatermark(\"meta_dt\", \"20 minutes\")\\\n",
+        "  .groupBy(F.window(\"meta_dt\",\"10 seconds\")\\\n",
         "         , \"type\")\\\n",
         "  .count()\\\n",
         "  .writeStream\\\n",
@@ -489,7 +548,7 @@
       "metadata": {
         "id": "iMpk9pUSOiJG"
       },
-      "execution_count": 249,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -500,13 +559,14 @@
       "metadata": {
         "id": "Hc6btCw3kOoG"
       },
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "inmemoryQuery = rc_df\\\n",
+        "inmemoryQuery = recentChange\\\n",
+        "  .withColumn(\"meta_dt\", recentChange.meta_dt.cast(T.TimestampType()))\\\n",
         "  .groupBy(F.window(\"meta_dt\",\"1 minutes\"), \"type\")\\\n",
         "  .count()\\\n",
         "  .writeStream\\\n",
@@ -518,22 +578,22 @@
       "metadata": {
         "id": "ETsu-DJmOyRv"
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "spark.sql(\"select * from myquery order by window\").show(truncate=False)"
+        "spark.sql(\"select * from myquery order by type\").show(truncate=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bw9804hHQiBj",
-        "outputId": "0d3d22d4-5de5-41b8-8166-ca0cc0c89197"
+        "outputId": "36e09e5e-80ac-42da-8bc8-dbbcc6b607d5"
       },
-      "execution_count": 246,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,18 +602,12 @@
             "+------------------------------------------+----------+-----+\n",
             "|window                                    |type      |count|\n",
             "+------------------------------------------+----------+-----+\n",
-            "|{2024-09-09 08:31:00, 2024-09-09 08:32:00}|categorize|1    |\n",
-            "|{2024-09-09 08:31:00, 2024-09-09 08:32:00}|edit      |3    |\n",
-            "|{2024-09-09 10:10:00, 2024-09-09 10:11:00}|edit      |2    |\n",
-            "|{2024-09-09 10:10:00, 2024-09-09 10:11:00}|categorize|2    |\n",
-            "|{2024-09-09 10:12:00, 2024-09-09 10:13:00}|new       |1    |\n",
-            "|{2024-09-09 10:12:00, 2024-09-09 10:13:00}|categorize|1    |\n",
-            "|{2024-09-09 10:12:00, 2024-09-09 10:13:00}|log       |3    |\n",
-            "|{2024-09-09 10:12:00, 2024-09-09 10:13:00}|edit      |10   |\n",
-            "|{2024-09-09 10:34:00, 2024-09-09 10:35:00}|log       |1    |\n",
-            "|{2024-09-09 10:34:00, 2024-09-09 10:35:00}|edit      |4    |\n",
-            "|{2024-09-09 10:34:00, 2024-09-09 10:35:00}|new       |1    |\n",
-            "|{2024-09-09 10:34:00, 2024-09-09 10:35:00}|categorize|9    |\n",
+            "|{2024-09-11 11:27:00, 2024-09-11 11:28:00}|categorize|2    |\n",
+            "|{2024-09-11 11:29:00, 2024-09-11 11:30:00}|categorize|1    |\n",
+            "|{2024-09-11 11:27:00, 2024-09-11 11:28:00}|edit      |1    |\n",
+            "|{2024-09-11 11:28:00, 2024-09-11 11:29:00}|edit      |4    |\n",
+            "|{2024-09-11 11:29:00, 2024-09-11 11:30:00}|edit      |3    |\n",
+            "|{2024-09-11 11:27:00, 2024-09-11 11:28:00}|new       |1    |\n",
             "+------------------------------------------+----------+-----+\n",
             "\n"
           ]
@@ -568,7 +622,18 @@
       "metadata": {
         "id": "3rYeooV7WG_5"
       },
-      "execution_count": 248,
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%ls -lr input"
+      ],
+      "metadata": {
+        "id": "z8wLp1XYJNN5"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
